initial sync with streams